Name:                restful-payment-channel-server
Version:             0.1.0
Synopsis:            RESTful Bitcoin payment channel server
Description:         TODO
License:             PublicDomain
Author:              Rune K. Svendsen
Maintainer:          runesvend@gmail.com
Stability:           Experimental
Homepage:            https://github.com/runeksvendsen/restful-payment-channel-server
bug-reports:         https://github.com/runeksvendsen/restful-payment-channel-server/issues
category:            Bitcoin, Finance, Network
Build-type:          Simple
Cabal-version:       >= 1.2


Executable PayChanServer
  hs-source-dirs: src
  main-is: PayChanServer/Main.hs
  ghc-options: -W -O2 -threaded -with-rtsopts=-N
                -main-is PayChanServer.Main
  default-extensions: OverloadedStrings
  Build-depends:
    base                      >= 4     && < 5,
    bytestring                >= 0.9.1 && < 0.11,
    MonadCatchIO-transformers >= 0.2.1 && < 0.4,
    mtl                       >= 2     && < 3,
    snap-core                 >= 0.9   && < 0.10,
    snap-server               >= 0.9   && < 0.10,
    snap,
    blaze-builder,
    bitcoin-payment-channel   >= 0.1.1.0 && < 0.3,
    haskoin-core              >= 0.3.0 && < 1.0.0,
    secp256k1,
    transformers,
    aeson, vector,
    base16-bytestring,
    scientific,
    time,
    wreq,
    lens,
    aeson-pretty,
    stm-containers,
    configurator,
    binary, cereal,
    hashable,
    string-conversions,
    errors,
    hexstring,
    http-client, http-types,
    bitcoin-api, bitcoin-tx,
    case-insensitive,
    unix,
    exceptions,
    filepath,
    -- email
    HaskellNet,
    HaskellNet-SSL



  other-modules: PayChanServer.App,
                 Common.Common


Executable ChanStore
  hs-source-dirs: src
  main-is: ChanStoreServer/Main.hs
  ghc-options: -W -O2 -threaded -with-rtsopts=-N -main-is ChanStoreServer.Main
  default-extensions: OverloadedStrings
  build-depends:
    base                      >= 4     && < 5,
    bytestring                >= 0.9.1 && < 0.11,
    MonadCatchIO-transformers >= 0.2.1 && < 0.4,
    mtl                       >= 2     && < 3,
    snap-core                 >= 0.9   && < 0.10,
    snap-server               >= 0.9   && < 0.10,
    snap,
    blaze-builder,
    bitcoin-payment-channel   >= 0.1.1.0 && < 0.3,
    haskoin-core              >= 0.3.0 && < 1.0.0,
    secp256k1,
    transformers,
    aeson, vector,
    base16-bytestring,
    scientific,
    time,
    wreq,
    lens,
    aeson-pretty,
    stm-containers,
    configurator,
    binary, cereal,
    hashable,
    string-conversions,
    errors,
    hexstring,
    http-client,
    bitcoin-api, bitcoin-tx,
    case-insensitive,
    unix,
    exceptions,
    filepath,
    spawn

Executable SigningService
  hs-source-dirs: src
  main-is: SigningService/Main.hs
  ghc-options: -W -O2 -threaded -with-rtsopts=-N -main-is SigningService.Main
  default-extensions: OverloadedStrings
  build-depends:
    base                      >= 4     && < 5,
    bytestring                >= 0.9.1 && < 0.11,
    MonadCatchIO-transformers >= 0.2.1 && < 0.4,
    mtl                       >= 2     && < 3,
    snap-core                 >= 0.9   && < 0.10,
    snap-server               >= 0.9   && < 0.10,
    snap,
    blaze-builder,
    bitcoin-payment-channel   >= 0.1.1.0 && < 0.3,
    haskoin-core              >= 0.3.0 && < 1.0.0,
    secp256k1,
    transformers,
    aeson, vector,
    base16-bytestring,
    scientific,
    time,
    wreq,
    lens,
    aeson-pretty,
    stm-containers,
    configurator,
    binary, cereal,
    hashable,
    string-conversions,
    errors,
    hexstring,
    http-client,
    bitcoin-api, bitcoin-tx,
    case-insensitive,
    unix,
    exceptions,
    filepath

--Executable CleanImports
--  hs-source-dirs: src
--  main-is: CleanImports.hs
--  ghc-options: -W -O2 -threaded -with-rtsopts=-N -main-is CleanImports
--
--  build-depends:
--    base                      >= 4     && < 5,
--    process,
--    attoparsec,
--    string-conversions

Library
  exposed-modules:      DiskStore
  ghc-options:          -W -O2 -threaded -with-rtsopts=-N

  build-depends:        base                      >= 4     && < 5,
                        directory,
                        list-t,
                        stm,
                        exceptions

  hs-source-dirs:       src
  default-language:     Haskell2010

--Executable Email
--    hs-source-dirs:       src
--    main-is:              Email.hs
--    ghc-options:          -main-is Email
--
--    Build-depends:
--                    base,
--                    HaskellNet,
--                    HaskellNet-SSL

Executable GenTestData
    hs-source-dirs:       src
    main-is:              Test/Main.hs
    ghc-options:          -W -O2 -main-is Test.Main

    Build-depends:
      base                      >= 4     && < 5,
      bytestring                >= 0.9.1 && < 0.11,
      MonadCatchIO-transformers >= 0.2.1 && < 0.4,
      mtl                       >= 2     && < 3,
      snap-core                 >= 0.9   && < 0.10,
      snap-server               >= 0.9   && < 0.10,
      directory,
      bitcoin-payment-channel   >= 0.1.1.0 && < 0.3,
      transformers,
      haskoin-core,
      aeson,
      base16-bytestring,
      scientific,
      time,
      wreq,
      lens,
      text,
      aeson-pretty,
      configurator,
      string-conversions,
      errors,
      entropy,
      secp256k1,
      optparse-applicative

Executable RunTestData
    hs-source-dirs:       src
    main-is:              Test/RunData.hs
    ghc-options:          -W -O2 -main-is Test.RunData

    Build-depends:
      base                      >= 4     && < 5,
      bytestring                >= 0.9.1 && < 0.11,
      MonadCatchIO-transformers >= 0.2.1 && < 0.4,
      mtl                       >= 2     && < 3,
      snap-core                 >= 0.9   && < 0.10,
      snap-server               >= 0.9   && < 0.10,
      directory,
      bitcoin-payment-channel   >= 0.1.1.0 && < 0.3,
      transformers,
      haskoin-core,
      aeson,
      base16-bytestring,
      scientific,
      time,
      wreq,
      lens,
      text,
      aeson-pretty,
      configurator,
      string-conversions,
      errors,
      entropy,
      secp256k1,
      optparse-applicative

  hs-source-dirs:       src
  default-language:     Haskell2010