Name:                restful-payment-channel-server
Version:             0.1.0
Synopsis:            RESTful Bitcoin payment channel server
Description:         TODO
License:             PublicDomain
Author:              Rune K. Svendsen
Maintainer:          runesvend@gmail.com
Stability:           Experimental
Homepage:            https://github.com/runeksvendsen/restful-payment-channel-server
bug-reports:         https://github.com/runeksvendsen/restful-payment-channel-server/issues
category:            Bitcoin, Finance, Network
Build-type:          Simple
Cabal-version:       >= 1.6


source-repository head
  type:     git
  location: https://github.com/runeksvendsen/restful-payment-channel-server

Executable PayChanServer
  hs-source-dirs: src
  main-is: PayChanServer/Main.hs
  ghc-options: -W -O2 -threaded -with-rtsopts=-N
               -main-is PayChanServer.Main

  default-extensions: OverloadedStrings

  build-depends:
    base                      >= 4     && < 5,
    -- Servant
    servant                   == 0.7.1,
    servant-server            == 0.7.1,
    servant-client            == 0.7.1,
    http-api-data,
    -- Snap
    monad-control             == 1.0.*,
    mtl                       >= 2     && < 3,
    snap-core                 == 1.0.*,
    snap-server               == 1.0.*,
    snap                      == 1.0.*,
    io-streams,

    bitcoin-payment-channel   == 0.2.2.0,
    haskoin-core              == 0.3.1,
    bytestring                >= 0.9.1 && < 0.11,
    blaze-builder,
    -- APISpec.Blockchain
    blockchain-restful-address-index,
    secp256k1,
    transformers,
    aeson, vector,
    base16-bytestring,
    scientific,
    time,
    lens,
    aeson-pretty,
    stm-containers,
    configurator,
    binary, cereal,
    hashable,
    string-conversions,
    errors,
    hexstring,
    http-client, http-client-tls, http-types,
    case-insensitive,
    unix,
    exceptions,
    filepath,
    tagged


  other-modules: PayChanServer.App,
                 Common.Types,
                 BlockchainAPI.Impl.ChainSo.ChainSo
                 BlockchainAPI.Types
                 ChanStore.Interface
                 ChanStore.Lib.ChanMap
                 ChanStore.Lib.Settlement
                 ChanStore.Lib.Types
                 ChanStore.Spec
                 Common.ResourceURL
                 Common.URLParam
                 Common.Util
                 ConnManager.Connection
                 ConnManager.RequestRunner
                 Data.DiskMap
                 Data.DiskMap.Internal.Helpers
                 Data.DiskMap.Internal.Update
                 Data.DiskMap.Sync.Deferred
                 Data.DiskMap.Sync.Sync
                 Data.DiskMap.Types
                 PayChanServer.Config.Types
                 PayChanServer.Config.Util
                 PayChanServer.DB
                 PayChanServer.Handlers
                 PayChanServer.Init
                 PayChanServer.Settlement
                 PayChanServer.Types
                 PayChanServer.Util
                 SigningService.Interface
                 SigningService.Spec
                 Test.GenData
                 BlockchainAPI.Impl.Bitcoind.Interface
                 BlockchainAPI.Impl.Bitcoind.Types
                 ConnManager.Servant
                 ConnManager.Types
                 Test.Dummy


Executable ChanStore
  hs-source-dirs: src
  main-is: ChanStore/Main.hs
  ghc-options: -W -O2 -threaded -with-rtsopts=-N -main-is ChanStore.Main
  default-extensions: OverloadedStrings
  build-depends:
    base                      >= 4     && < 5,
    bytestring                >= 0.9.1 && < 0.11,
    monad-control             == 1.0.*,
    mtl                       >= 2     && < 3,
    snap-core                 == 1.0.*,
    snap-server               == 1.0.*,
    snap                      == 1.0.*,
    io-streams,
    blaze-builder,
    bitcoin-payment-channel   >= 0.1.1.0 && < 0.3,
    haskoin-core              >= 0.3.0 && < 1.0.0,
    secp256k1,
    transformers,
    aeson, vector,
    base16-bytestring,
    scientific,
    time,
--    wreq,
    lens,
    aeson-pretty,
    stm-containers,
    configurator,
    binary, cereal,
    hashable,
    string-conversions,
    errors,
    hexstring,
    http-client,
    case-insensitive,
    unix,
    exceptions,
    filepath,
    spawn
  other-modules:
                     ChanStore.Init
                     ChanStore.Interface
                     ChanStore.Lib.ChanMap
                     ChanStore.Lib.Settlement
                     ChanStore.Lib.Types
                     ChanStore.Spec
                     Common.ResourceURL
                     Common.Types
                     Common.URLParam
                     Common.Util
                     ConnManager.Connection
                     ConnManager.RequestRunner
                     Data.DiskMap
                     Data.DiskMap.Internal.Helpers
                     Data.DiskMap.Internal.Update
                     Data.DiskMap.Sync.Deferred
                     Data.DiskMap.Sync.Sync
                     Data.DiskMap.Types
                     PayChanServer.App
                     PayChanServer.Config.Types
                     PayChanServer.Config.Util
                     PayChanServer.DB
                     PayChanServer.Handlers
                     PayChanServer.Init
                     PayChanServer.Main
                     PayChanServer.Settlement
                     PayChanServer.Types
                     PayChanServer.Util
                     SigningService.Interface
                     SigningService.Spec
                     BlockchainAPI.Impl.Bitcoind.Interface
                     BlockchainAPI.Impl.Bitcoind.Types
                     BlockchainAPI.Types
                     ConnManager.Servant
                     ConnManager.Types
                     Test.Dummy
                     Test.GenData

Executable SigningService
  hs-source-dirs: src
  main-is: SigningService/Main.hs
  ghc-options: -W -O2 -main-is SigningService.Main
  default-extensions: OverloadedStrings
  build-depends:
    base                      >= 4     && < 5,
    bytestring                >= 0.9.1 && < 0.11,
    monad-control             == 1.0.*,
    snap-core                 == 1.0.*,
    snap-server               == 1.0.*,
    snap                      == 1.0.*,
    mtl                       >= 2     && < 3,
    io-streams,
    blaze-builder,
    bitcoin-payment-channel   >= 0.1.1.0 && < 0.3,
    haskoin-core              >= 0.3.0 && < 1.0.0,
    secp256k1,
    configurator,
    binary,
    string-conversions,
    errors
  other-modules:     BlockchainAPI.Impl.Bitcoind.Interface
                     BlockchainAPI.Impl.Bitcoind.Types
                     BlockchainAPI.Types
                     ChanStore.Interface
                     ChanStore.Lib.ChanMap
                     ChanStore.Lib.Settlement
                     ChanStore.Lib.Types
                     ChanStore.Spec
                     Common.ResourceURL
                     Common.Types
                     Common.URLParam
                     Common.Util
                     ConnManager.Connection
                     ConnManager.RequestRunner
                     ConnManager.Servant
                     ConnManager.Types
                     Data.DiskMap
                     Data.DiskMap.Internal.Helpers
                     Data.DiskMap.Internal.Update
                     Data.DiskMap.Sync.Deferred
                     Data.DiskMap.Sync.Sync
                     Data.DiskMap.Types
                     PayChanServer.App
                     PayChanServer.Config.Types
                     PayChanServer.Config.Util
                     PayChanServer.DB
                     PayChanServer.Handlers
                     PayChanServer.Init
                     PayChanServer.Main
                     PayChanServer.Settlement
                     PayChanServer.Types
                     PayChanServer.Util
                     SigningService.Interface
                     SigningService.Spec
                     SigningService.Types
                     SigningService.Util
                     Test.Dummy
                     Test.GenData


Library
  exposed-modules:      Data.DiskMap
  ghc-options:          -W -O2 -with-rtsopts=-N

  build-depends:        base                      >= 4     && < 5,
                        directory,
                        list-t,
                        stm,
                        exceptions

  hs-source-dirs:       src
  default-language:     Haskell2010
  other-modules:        Data.DiskMap.Internal.Helpers
                        Data.DiskMap.Internal.Update
                        Data.DiskMap.Sync.Deferred
                        Data.DiskMap.Sync.Sync
                        Data.DiskMap.Types



Executable GenTestData
    hs-source-dirs:       src
    main-is:              Test/GenDataExe.hs
    ghc-options:          -W -O2 -main-is Test.GenDataExe

    Build-depends:
      base                      >= 4     && < 5,
      bytestring                >= 0.9.1 && < 0.11,
      monad-control             == 1.0.*,
      mtl                       >= 2     && < 3,
      snap-core                 == 1.0.*,
      snap-server               == 1.0.*,
      directory,
      bitcoin-payment-channel   >= 0.1.1.0 && < 0.3,
      transformers,
      haskoin-core,
      aeson,
      base16-bytestring,
      scientific,
      time,
--      wreq,
      lens,
      text,
      aeson-pretty,
      configurator,
      string-conversions,
      errors,
      entropy,
      secp256k1,
      optparse-applicative

Executable RunTestData
    hs-source-dirs:       src
    main-is:              Test/RunData.hs
    ghc-options:          -W -O2 -main-is Test.RunData

    Build-depends:
      base                      >= 4     && < 5,
      bytestring                >= 0.9.1 && < 0.11,
      monad-control             == 1.0.*,
      mtl                       >= 2     && < 3,
      snap-core                 == 1.0.*,
      snap-server               == 1.0.*,
      directory,
      bitcoin-payment-channel   >= 0.1.1.0 && < 0.3,
      transformers,
      haskoin-core,
      aeson,
      base16-bytestring,
      scientific,
      time,
      wreq,
      lens,
      text,
      aeson-pretty,
      configurator,
      string-conversions,
      errors,
      entropy,
      secp256k1,
      optparse-applicative

  hs-source-dirs:       src
  default-language:     Haskell2010
