Name:                restful-payment-channel-server
Version:             0.2.0
Synopsis:            RESTful Bitcoin payment channel server
Description:         TODO
License:             PublicDomain
Author:              Rune K. Svendsen
Maintainer:          runesvend@gmail.com
Stability:           Experimental
Homepage:            https://github.com/runeksvendsen/restful-payment-channel-server
Bug-reports:         https://github.com/runeksvendsen/restful-payment-channel-server/issues
Category:            Bitcoin, Finance, Network
Build-type:          Simple
Cabal-version:       >= 1.6


source-repository head
  type:     git
  location: https://github.com/runeksvendsen/restful-payment-channel-server

Executable PayChanServer
  hs-source-dirs: src
  main-is: PayChanServer/Main.hs
  ghc-options: -W -O2 -threaded -with-rtsopts=-N
               -main-is PayChanServer.Main
  default-extensions:   OverloadedStrings
  build-depends:
    base                      >= 4     && < 5,
    haskell-rbpcp-api,
    bitcoin-payment-channel   == 0.5.0.0,
    haskoin-core              == 0.4.0,
    bytestring                >= 0.9.1 && < 0.11,
    -- APISpec.Blockchain
    blockchain-restful-address-index,
    -- haskoin-core dep
    secp256k1,
    -- Servant
    servant                   >= 0.7   && < 0.9,
    servant-server            >= 0.7   && < 0.9,
    servant-client            >= 0.7   && < 0.9,
    http-api-data,
    warp,
    http-client, http-client-tls, http-types,
    -- The rest
    mtl                       >= 2     && < 3,
    transformers,
    aeson, vector,
    base16-bytestring,
    scientific,
    time,
    lens,
    containers,stm-containers,
    configurator,
    cereal, cereal-text,
    hashable,
    string-conversions,
    errors,
    hexstring,
    unix,
    exceptions,
    filepath,
    tagged
--    binary-serialise-cbor

  other-modules:   BlockchainAPI.Impl.Bitcoind.Interface
                   BlockchainAPI.Impl.Bitcoind.Types
                   BlockchainAPI.Types
                   ChanStore.API
                   ChanStore.Interface
                   ChanStore.Lib.Settlement
                   ChanStore.Lib.Types
                   ChanStore.Orphans
                   
                   Common.Handler.Types
                   Common.Types
                   Common.URLParam
                   Common.Util
                   ConnManager.Connection
                   ConnManager.RequestRunner
                   ConnManager.Servant
                   ConnManager.Types
                   PayChanServer.API
                   PayChanServer.App
                   PayChanServer.Config.Types
                   PayChanServer.Config.Util
                   PayChanServer.DB
                   PayChanServer.Handler.BeginOpen
                   PayChanServer.Handler.Close
                   PayChanServer.Handler.FundingInfo
                   PayChanServer.Handler.Open
                   PayChanServer.Handler.Pay
                   PayChanServer.Init
                   PayChanServer.Settlement
                   PayChanServer.Types
                   PayChanServer.URI
                   PayChanServer.Util
                   SigningService.Interface
                   SigningService.Spec
                   Test.Dummy
                   Test.GenData
                   Test.Profile
                   Util


Executable ChanStore
  hs-source-dirs: src
  main-is: ChanStore/Main.hs
  ghc-options: -W -O2 -threaded -with-rtsopts=-N -main-is ChanStore.Main
  default-extensions: OverloadedStrings
  build-depends:
    base                      >= 4     && < 5,
    bytestring                >= 0.9.1 && < 0.11,
    mtl                       >= 2     && < 3,
    bitcoin-payment-channel   == 0.5.0.0,
    haskoin-core              == 0.4.0,
    secp256k1,
    haskell-stm-diskmap,
    -- Servant
    servant,
    servant-server,
    http-api-data,
    http-media,
    wai,
    warp,
    http-client,
    transformers,
    aeson, vector,
    base16-bytestring,
    scientific,
    time,
    lens,
    stm-containers,
    configurator,
    cereal, cereal-text,
    hashable,
    string-conversions,
    errors,
    hexstring,
    unix,
    exceptions,
    spawn,
    stm,
    list-t
--    binary-serialise-cbor

  other-modules:    BlockchainAPI.Impl.Bitcoind.Interface
                    BlockchainAPI.Impl.Bitcoind.Types
                    BlockchainAPI.Types
                    ChanStore.API
                    ChanStore.Init
                    ChanStore.Interface
                    ChanStore.Lib.ChanMap
                    ChanStore.Lib.Settlement
                    ChanStore.Lib.Types
                    ChanStore.Orphans
                    
                    Common.Handler.Types
                    Common.Types
                    Common.URLParam
                    Common.Util
                    ConnManager.Connection
                    ConnManager.RequestRunner
                    ConnManager.Servant
                    ConnManager.Types
                    PayChanServer.API
                    PayChanServer.App
                    PayChanServer.Config.Types
                    PayChanServer.Config.Util
                    PayChanServer.DB
                    PayChanServer.Handler.BeginOpen
                    PayChanServer.Handler.Close
                    PayChanServer.Handler.FundingInfo
                    PayChanServer.Handler.Open
                    PayChanServer.Handler.Pay
                    PayChanServer.Init
                    PayChanServer.Main
                    PayChanServer.Settlement
                    PayChanServer.Types
                    PayChanServer.URI
                    PayChanServer.Util
                    SigningService.Interface
                    SigningService.Spec
                    Test.Dummy
                    Test.GenData
                    Test.Profile
                    Util

Executable SigningService
  hs-source-dirs: src
  main-is: SigningService/Main.hs
  ghc-options: -W -main-is SigningService.Main
  default-extensions: OverloadedStrings
  build-depends:
    base                      >= 4     && < 5,
    bytestring                >= 0.9.1 && < 0.11,
    monad-control             == 1.0.*,
    snap-core                 == 1.0.*,
    snap-server               == 1.0.*,
    snap                      == 1.0.*,
    mtl                       >= 2     && < 3,
    io-streams,
    blaze-builder,
    bitcoin-payment-channel   == 0.5.0.0,
    haskoin-core              == 0.4.0,
    secp256k1,
    configurator,
    string-conversions,
    errors
  other-modules:        BlockchainAPI.Impl.Bitcoind.Interface
                        BlockchainAPI.Impl.Bitcoind.Types
                        BlockchainAPI.Types
                        ChanStore.API
                        ChanStore.Interface
                        ChanStore.Lib.Settlement
                        ChanStore.Lib.Types
                        ChanStore.Orphans
                        
                        Common.Handler.Types
                        Common.Types
                        Common.URLParam
                        Common.Util
                        ConnManager.Connection
                        ConnManager.RequestRunner
                        ConnManager.Servant
                        ConnManager.Types
                        PayChanServer.API
                        PayChanServer.App
                        PayChanServer.Config.Types
                        PayChanServer.Config.Util
                        PayChanServer.DB
                        PayChanServer.Handler.BeginOpen
                        PayChanServer.Handler.Close
                        PayChanServer.Handler.FundingInfo
                        PayChanServer.Handler.Open
                        PayChanServer.Handler.Pay
                        PayChanServer.Init
                        PayChanServer.Main
                        PayChanServer.Settlement
                        PayChanServer.Types
                        PayChanServer.URI
                        PayChanServer.Util
                        SigningService.Interface
                        SigningService.Snap.Util
                        SigningService.Spec
                        SigningService.Types
                        SigningService.Util
                        Test.Dummy
                        Test.GenData
                        Test.Profile
                        Util

Executable GenTestData
    hs-source-dirs:       src
    main-is:              Test/GenDataExe.hs
    ghc-options:          -W -O2 -main-is Test.GenDataExe
    default-extensions:   OverloadedStrings
    default-language:     Haskell2010

    Build-depends:
      base                      >= 4     && < 5,
      mtl                       >= 2     && < 3,
      bytestring                >= 0.9.1 && < 0.11,
      bitcoin-payment-channel   == 0.5.0.0,
      transformers,
      haskoin-core,
      secp256k1,
      aeson,
      base16-bytestring,
      scientific,
      time,
      text,
      configurator,
      string-conversions,
      errors,
      entropy,
      optparse-applicative

    other-modules:          BlockchainAPI.Types
                            ChanStore.API
                            ChanStore.Interface
                            ChanStore.Lib.Types
                            ChanStore.Orphans
                            
                            Common.Handler.Types
                            Common.Types
                            Common.URLParam
                            Common.Util
                            ConnManager.Connection
                            ConnManager.RequestRunner
                            ConnManager.Servant
                            ConnManager.Types
                            PayChanServer.API
                            PayChanServer.Config.Types
                            PayChanServer.Types
                            PayChanServer.URI
                            Test.GenData

Executable RunTestData
    hs-source-dirs:       src
    main-is:              Test/RunData.hs
    ghc-options:          -W -O2 -main-is Test.RunData
    default-language:     Haskell2010
    default-extensions:   OverloadedStrings
    Build-depends:
      base                      >= 4     && < 5,
      bytestring                >= 0.9.1 && < 0.11,
      mtl                       >= 2     && < 3,
      bitcoin-payment-channel   == 0.5.0.0,
      transformers,
      haskoin-core,
      secp256k1,
      aeson,
      base16-bytestring,
      scientific,
      time,
      wreq,
      lens,
      text,
      configurator,
      string-conversions,
      errors,
      optparse-applicative

    other-modules:          BlockchainAPI.Types
                            ChanStore.API
                            ChanStore.Interface
                            ChanStore.Lib.Types
                            ChanStore.Orphans
                            
                            Common.Handler.Types
                            Common.Types
                            Common.URLParam
                            Common.Util
                            ConnManager.Connection
                            ConnManager.RequestRunner
                            ConnManager.Servant
                            ConnManager.Types
                            PayChanServer.API
                            PayChanServer.Config.Types
                            PayChanServer.Types
                            PayChanServer.URI
                            Test.GenData

